# GrabonInsurance-MCP

./: .env.example  .gitignore  BLUEPRINT.md  CLAUDE.md  MCP_CONNECTION_GUIDE.md  README.md  claude_desktop_config_example.json  package.json  pyproject.toml  requirements.txt
api/: __init__.py  main.py  pricing_api.py
api/routes/: __init__.py  ab_events.py  deals.py  insurance.py
data/: insurance_catalog.json  mock_deals.json  mock_users.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ABVariantRenderer.jsx  CartScenarioDemo.jsx  ConversionDashboard.jsx  DealCard.jsx  InsuranceOfferCard.jsx  InsuranceStorefront.jsx
insurance_engine/: __init__.py  ab_testing.py  cart_resolver.py  catalog.py  classifier.py  pricing.py
mcp_server/: __init__.py  prompts.py  resources.py  schemas.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_ab_testing.py  test_cart_resolver.py  test_classifier.py  test_copy_quality.py  test_mcp_tools.py  test_pricing.py
